las cozas de cosear, moraleja: más vale menusito guino que empresa un viernes

--- a/ExpoFpApp/app/src/main/res/values/strings.xml
+++ b/ExpoFpApp/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="SubirImagen">Subir Imagen</string>
     <string name="Nombre">Nombre</string>
     <string name="RepetirPass">Repita su contraseña</string>
+    <string name="deRegistroaLogin">LOGIN</string>
 </resources>
