--- a/ExpoFpApp/app/src/main/res/values/strings.xml
+++ b/ExpoFpApp/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="deRegistroaLogin">LOGIN</string>
     <string name="Logout">Cerrar sesión</string>
     <string name="CambiarPass">Cambiar contraseña</string>
+    <string name="NuevaPass">Nueva contraseña</string>
+    <string name="Cambiar">Cambiar</string>
 </resources>
