Login y Registro en bonito, sin validaciones

--- a/ExpoFpApp/app/src/main/res/values/strings.xml
+++ b/ExpoFpApp/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="SubirImagen">Subir Imagen</string>
+    <string name="SubirImagen">Foto perfil</string>
     <string name="Nombre">Nombre</string>
     <string name="RepetirPass">Repita su contraseña</string>
     <string name="deRegistroaLogin">LOGIN</string>
